// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render link 1`] = `
.c0 {
  transition: all 70ms ease-out;
  transition-property: color;
  color: #3C64F4;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 400;
  text-decoration: none;
}

.c0:active {
  color: #0024A6;
}

.c0:hover:not(:active) {
  color: #0024A6;
}

<a
  class="c0"
  href="#"
>
  Link
</a>
`;

exports[`renders with external icon 1`] = `
.c1 {
  vertical-align: middle;
  height: 1rem;
  width: 1rem;
}

.c0 {
  transition: all 70ms ease-out;
  transition-property: color;
  color: #3C64F4;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 400;
  text-decoration: none;
  display: inline-flex;
  align-items: center;
}

.c0:active {
  color: #0024A6;
}

.c0:hover:not(:active) {
  color: #0024A6;
}

.c0 svg {
  flex-shrink: 0;
  margin-left: 0.25rem;
}

<a
  class="c0"
  href="#"
  target="_blank"
>
  <span>
    Link
  </span>
  <svg
    aria-hidden="true"
    class="c1"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5a2 2 0 00-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13a.996.996 0 101.41 1.41L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
    />
  </svg>
</a>
`;
